feat: Support nonzero shard/realm in Yahcli file commands (#19359)
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>